Implemented Prediction Engine

--- a/ApiAnalyticsApp.Services/ApiAnalyticsApp.Services.csproj
+++ b/ApiAnalyticsApp.Services/ApiAnalyticsApp.Services.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApiAnalyticsApp.Algorithms\ApiAnalyticsApp.Algorithms.csproj" />
     <ProjectReference Include="..\ApiAnalyticsApp.DataAccess\ApiAnalyticsApp.DataAccess.csproj" />
     <ProjectReference Include="..\ApiAnalyticsApp.DataTransferObjects\ApiAnalyticsApp.DataTransferObjects.csproj" />
   </ItemGroup>
